--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.url=jdbc:postgresql://${S_POSTGRES_HOST:localhost}:5432/postgr
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
+spring.jpa.hibernate.ddl-auto=update
+
 default.kafka.bootstrap-server=localhost:29092
 spring.kafka.bootstrap-server=${S_KAFKA_BOOTSTRAP_HOST:${default.kafka.bootstrap-server}}
 
