--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=update
 
 spring.flyway.baseline-on-migrate=true
+
+default.url.for.ping=https://google.com
