--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.password=postgres
 
 spring.jpa.hibernate.ddl-auto=update
 
+proxy.api-key=MjE5MA.X7oUWg.rEwqAdonFMlghdyvwCD2eW408v8
+proxy.api-url=https://proxy11.com/api/proxy.json
+
 spring.flyway.baseline-on-migrate=true
 
 default.url.for.ping=https://google.com
