--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ proxy.api-url=https://proxy11.com/api/proxy.json
 spring.flyway.baseline-on-migrate=true
 
 default.url.for.ping=https://google.com
+
+cron.job.get.proxies=0 */2 * * * *
