--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.flyway.baseline-on-migrate=true
 default.url.for.ping=https://google.com
 
 cron.job.get.proxies=0 */12 * * * *
+
+#Eureka properties
+eureka.client.service-url.defaultZone=http://localhost:8761
