Prometheus and micrometer metrics for available proxies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ default.url.for.ping=https://google.com
 
 cron.job.get.proxies=0 */12 * * * *
 cron.job.delete.proxies=0 */30 * * * *
+#update metrics every 30 seconds
+cron.job.update.metrics=*/30 * * * * *
 
 #Eureka properties
 eureka.client.service-url.defaultZone=http://localhost:8761
