--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 proxy.api-key=MjE5MA.X7oUWg.rEwqAdonFMlghdyvwCD2eW408v8
 proxy.api-url=https://proxy11.com/api/proxy.json
+proxy.api2-url=https://www.proxy-list.download/api/v1/get
 
 spring.flyway.baseline-on-migrate=true
 
